[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "landgempy"
version = "0.1.0"
description = "Python Package for EPA's LandGEM model"
readme = "README.md"
authors = [{name = "Ryan Kmetz", email = "consultrmk@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
keywords = ["EPA", "LandGEM", "landfill", "gas", "emissions", "environmental"]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.4",
    # Add other dependencies
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/rmkenv/landgempy"
Documentation = "https://github.com/rmkenv/landgempy"
Repository = "https://github.com/rmkenv/landgempy"
"Bug Tracker" = "https://github.com/rmkenv/landgempy/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
