[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landgempy"
version = "0.1.0"
description = "Python Package for EPA's LandGEM (Landfill Gas Emissions Model)"
authors = [{name = "Ryan Kmetz", email = "consultrmk@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    # Add other dependencies your code requires
]

[project.urls]
Homepage = "https://github.com/rmkenv/landgempy"
Repository = "https://github.com/rmkenv/landgempy"
